fixed team overflow

--- a/#src/scss/components/_team.scss
+++ b/#src/scss/components/_team.scss
@@ -14,14 +14,14 @@
   }
 
   &__header {
-    margin-bottom: 200px;
+    margin-bottom: 180px;
 
     @media(max-width:$md4) {
-      margin-bottom: 100px;
+      margin-bottom: 80px;
     }
 
     @media(max-width:$md5) {
-      margin-bottom: 70px;
+      margin-bottom: 50px;
     }
   }
 
@@ -42,6 +42,7 @@
   }
 
   &__item {
+    padding-top: 20px;
     text-align: center;
   }
 }
